--- a/app/src/main/res/layout/item_calendar_noti.xml
+++ b/app/src/main/res/layout/item_calendar_noti.xml
@@ -43,11 +43,11 @@
             android:id="@+id/noti_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/spacing12"
-            android:fontFamily="@font/suit_b"
+            android:layout_marginStart="@dimen/spacing10"
+            android:layout_marginTop="2dp"
             android:text="@{@string/noti_item_type(item.notiType.str)}"
+            android:textAppearance="@style/TextAppearance.Suit.B4"
             android:textColor="@color/gray_700"
-            android:textSize="14sp"
             app:layout_constraintStart_toEndOf="@id/item_image"
             app:layout_constraintTop_toTopOf="@id/item_image"
             tools:text="재입고 알림" />
@@ -58,11 +58,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/spacingSmall"
             android:ellipsize="end"
-            android:fontFamily="@font/suit_r"
             android:maxLines="1"
             android:text="@{item.itemName}"
+            android:textAppearance="@style/TextAppearance.Suit.D3"
             android:textColor="@color/gray_700"
-            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/noti_type"
             app:layout_constraintTop_toBottomOf="@id/noti_type"
@@ -72,9 +71,9 @@
             android:id="@+id/noti_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/suit_r"
+            android:layout_marginBottom="2dp"
+            android:textAppearance="@style/TextAppearance.Suit.D3"
             android:textColor="@color/gray_300"
-            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@id/noti_type"
             app:text="@{DateFormatUtilKt.convertYMDHMToAHM(item.notiDate)}"
