--- a/app/src/main/res/layout/item_noti.xml
+++ b/app/src/main/res/layout/item_noti.xml
@@ -39,21 +39,21 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:src="@color/ultra_semi_transparent"
-            app:layout_constraintStart_toStartOf="@id/item_image"
-            app:layout_constraintEnd_toEndOf="@id/item_image"
-            app:layout_constraintTop_toTopOf="@id/item_image"
             app:layout_constraintBottom_toBottomOf="@id/item_image"
+            app:layout_constraintEnd_toEndOf="@id/item_image"
+            app:layout_constraintStart_toStartOf="@id/item_image"
+            app:layout_constraintTop_toTopOf="@id/item_image"
             app:shapeAppearanceOverlay="@style/Style.CircleImageView.Half" />
 
         <TextView
             android:id="@+id/noti_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/spacing12"
-            android:fontFamily="@font/suit_b"
+            android:layout_marginStart="@dimen/spacing14"
+            android:layout_marginTop="2dp"
             android:text="@{String.format(context.getString(R.string.noti_item_type), item.notiType.str)}"
+            android:textAppearance="@style/TextAppearance.Suit.B4"
             android:textColor="@color/gray_700"
-            android:textSize="14sp"
             app:layout_constraintStart_toEndOf="@id/item_image"
             app:layout_constraintTop_toTopOf="@id/item_image"
             tools:text="재입고 알림" />
@@ -61,7 +61,7 @@
         <ImageView
             android:layout_width="8dp"
             android:layout_height="8dp"
-            android:layout_marginStart="@dimen/spacing5"
+            android:layout_marginStart="@dimen/spacingMicro"
             android:background="@drawable/shape_circle"
             android:backgroundTint="@color/green_500"
             android:visibility="@{item.readState == ReadStateType.READ.numValue ? View.INVISIBLE : View.VISIBLE}"
@@ -73,13 +73,12 @@
             android:id="@+id/item_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacingSmall"
+            android:layout_marginTop="@dimen/spacing10"
             android:ellipsize="end"
-            android:fontFamily="@font/suit_r"
             android:maxLines="2"
             android:text="@{item.itemName}"
+            android:textAppearance="@style/TextAppearance.Suit.D3"
             android:textColor="@color/gray_700"
-            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/noti_type"
             app:layout_constraintTop_toBottomOf="@id/noti_type"
@@ -89,9 +88,9 @@
             android:id="@+id/noti_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/suit_r"
+            android:layout_marginBottom="2dp"
+            android:textAppearance="@style/TextAppearance.Suit.D3"
             android:textColor="@color/gray_300"
-            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@id/noti_type"
             app:timeFormat="@{DateFormatUtilKt.convertStrTimeToDate(item.notiDate)}"
