[feat] 비밀번호 변경화면 변경된 컬러, 서체 시스템, 뷰 배치 간격 적용

--- a/app/src/main/res/layout/fragment_password_change.xml
+++ b/app/src/main/res/layout/fragment_password_change.xml
@@ -21,33 +21,10 @@
         android:layout_height="match_parent"
         android:background="@color/white">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageButton
-                android:id="@+id/back"
-                style="@style/Widget.Button.Icon.Navigation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="@{(v) -> Navigation.findNavController(v).popBackStack()}"
-                android:src="@drawable/ic_back"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                style="@style/Widget.Tab.Detail.TextAppearance.Title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/my_section_sub_title_edit_password"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <include
+            android:id="@+id/top_app_bar"
+            layout="@layout/view_top_app_bar"
+            app:title="@{@string/my_section_sub_title_edit_password}" />
 
         <TextView
             android:id="@+id/password_label"
@@ -56,9 +33,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:text="@string/my_new_password"
-            android:textAppearance="@style/Widget.EditText.Label.TextAppearance"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar" />
+            app:layout_constraintTop_toBottomOf="@id/top_app_bar" />
 
         <EditText
             android:id="@+id/password_input"
@@ -83,9 +59,7 @@
             style="@style/Widget.TextAppearance.Detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
             android:text="@string/sign_password_detail"
-            android:textAppearance="@style/Widget.EditText.Label.TextAppearance"
             app:layout_constraintStart_toStartOf="@id/password_input"
             app:layout_constraintTop_toBottomOf="@id/password_input"
             app:visibility="@{!viewModel.newPassword.empty &amp;&amp; !viewModel.isValidPassword()}" />
@@ -97,7 +71,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:text="@string/my_new_password_re_write"
-            android:textAppearance="@style/Widget.EditText.Label.TextAppearance"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/password_detail_message" />
 
@@ -120,9 +93,7 @@
             style="@style/Widget.TextAppearance.Detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
             android:text="@string/my_password_mismatch_detail"
-            android:textAppearance="@style/Widget.EditText.Label.TextAppearance"
             app:layout_constraintStart_toStartOf="@id/password_re_write_input"
             app:layout_constraintTop_toBottomOf="@id/password_re_write_input"
             app:visibility="@{!viewModel.reNewPassword.empty &amp;&amp; !viewModel.newPassword.equals(viewModel.reNewPassword)}" />
