--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -21,39 +21,10 @@
         android:layout_height="match_parent"
         android:background="@color/white">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageButton
-                android:id="@+id/back"
-                style="@style/Widget.Button.Icon.Navigation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="@{(v) -> Navigation.findNavController(v).popBackStack()}"
-                android:src="@drawable/ic_back"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                style="@style/Widget.Tab.Detail.TextAppearance.Title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/my_profile_edit_title"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@color/gray_100"
-            app:layout_constraintTop_toBottomOf="@id/toolbar" />
-
+        <include
+            android:id="@+id/top_app_bar"
+            layout="@layout/view_top_app_bar"
+            app:title="@{@string/my_profile_edit_title}" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/profile_image_container"
@@ -62,7 +33,7 @@
             android:layout_marginTop="32dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar">
+            app:layout_constraintTop_toBottomOf="@id/top_app_bar">
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/profile_image"
@@ -96,7 +67,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:text="@string/my_profile_nickname"
-            android:textAppearance="@style/Widget.EditText.Label.TextAppearance"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/profile_image_container" />
 
@@ -110,9 +80,7 @@
             android:hint="@string/my_profile_edit_nickname_hint"
             android:maxLength="12"
             android:maxLines="1"
-            android:paddingVertical="@dimen/spacing12"
             android:text="@={viewModel.inputNickName}"
-            android:textAppearance="@style/Widget.EditText.Basic.TextAppearance"
             app:layout_constraintTop_toBottomOf="@id/nickname_label">
 
             <requestFocus />
@@ -132,10 +100,9 @@
             android:id="@+id/nickname_length"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/suit_r"
             android:text="@{String.format(context.getString(R.string.length_format), viewModel.inputNickName.length(), 12)}"
+            android:textAppearance="@style/TextAppearance.Suit.D3"
             android:textColor="@color/gray_200"
-            android:textSize="@dimen/typographyDescription"
             app:layout_constraintEnd_toEndOf="@id/nickname_input"
             app:layout_constraintTop_toTopOf="@id/nickname_detail_text"
             tools:text="(7/12)자" />
@@ -143,12 +110,11 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/complete"
             style="@style/Widget.Button.Full.Round.Activate.Green"
-            android:layout_marginTop="@dimen/spacing20"
+            android:layout_width="match_parent"
             android:layout_marginBottom="@dimen/spacingBase"
             android:enabled="@{viewModel.isEnabledEditCompleteButton}"
             android:onClick="@{() -> viewModel.updateUserInfo()}"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:lottieState="@{viewModel.userInfoUpdateState}"
             app:textForLottieButton="@{@string/complete}"
             tools:text="@string/complete" />
