--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -118,7 +118,7 @@
         <item name="android:paddingTop">@dimen/spacingSmall</item>
         <item name="android:paddingBottom">@dimen/spacingSmall</item>
         <item name="cornerRadius">20dp</item>
-        <item name="android:textAppearance">@style/TextAppearance.Button.Small.Basic</item>
+        <item name="android:textAppearance">@style/TextAppearance.Suit.B3</item>
     </style>
 
     <style name="Widget.Button.Small.Round.Activate.Green" parent="Widget.Button.Small.Round">
@@ -211,6 +211,9 @@
         <item name="android:background">@android:color/transparent</item>
         <item name="android:paddingTop">@dimen/spacing20</item>
         <item name="android:paddingBottom">@dimen/spacing20</item>
+        <item name="android:textColor">@color/gray_700</item>
+        <item name="android:textColorHint">@color/gray_200</item>
+        <item name="android:textAppearance">@style/TextAppearance.Suit.B3</item>
     </style>
 
     <style name="Widget.EditText" parent="">
@@ -235,12 +238,6 @@
         <item name="android:textColor">@color/gray_700</item>
         <item name="android:fontFamily">@font/suit_r</item>
         <item name="android:textSize">16sp</item>
-    </style>
-
-    <style name="Item.Basic.Upload.EditText.TextAppearance" parent="">
-        <item name="android:textColor">@color/gray_700</item>
-        <item name="android:textSize">15sp</item>
-        <item name="fontFamily">@font/suit_m</item>
     </style>
 
     <style name="Widget.Snackbar" parent="">
