--- a/app/src/main/res/layout/item_folder_vertical.xml
+++ b/app/src/main/res/layout/item_folder_vertical.xml
@@ -21,7 +21,7 @@
             android:layout_height="0dp"
             android:layout_marginHorizontal="@dimen/spacingSmall"
             android:background="@drawable/shape_border_radius_10"
-            android:foreground="@color/ultra_semi_transparent"
+            android:foreground="@color/black_alpha_5"
             android:scaleType="centerCrop"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
