[mod] 마이페이지 > 프로필 편집 버튼 컬러 변경

--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -114,9 +114,9 @@
                     style="@style/Widget.Material.Button.Basic"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@color/gray_50"
+                    android:backgroundTint="@color/gray_100"
                     android:paddingHorizontal="@dimen/spacing10"
-                    android:paddingVertical="@dimen/spacing5"
+                    android:paddingVertical="@dimen/spacingMicro"
                     android:text="@string/my_profile_edit"
                     android:textAppearance="@style/TextAppearance.Suit.B3"
                     android:textColor="@color/gray_600"
