--- a/app/src/main/res/layout/item_calendar_noti.xml
+++ b/app/src/main/res/layout/item_calendar_noti.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="3dp"
         android:background="@drawable/shape_border_radius_24"
-        android:backgroundTint="#EFEFEF"
+        android:backgroundTint="@color/gray_50"
         android:padding="@dimen/spacingBase">
 
         <com.google.android.material.imageview.ShapeableImageView
