--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -84,7 +84,7 @@
             android:id="@+id/quantity_control_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/spacing10"
+            android:layout_marginStart="3dp"
             android:layout_marginBottom="11dp"
             android:gravity="center_vertical"
             app:layout_constraintBottom_toBottomOf="parent"
