--- a/app/src/main/res/layout/dialog_bottom_folder_upload.xml
+++ b/app/src/main/res/layout/dialog_bottom_folder_upload.xml
@@ -69,11 +69,12 @@
                     android:id="@+id/folder_name_length"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
                     android:text="@{@string/length_format(viewModel.folderName.length(), 10)}"
                     android:textAppearance="@style/TextAppearance.Suit.D3"
                     android:textColor="@color/gray_200"
                     app:layout_constraintEnd_toEndOf="@id/folder_name"
-                    app:layout_constraintTop_toTopOf="@id/folder_name_detail_text"
+                    app:layout_constraintTop_toBottomOf="@id/folder_name"
                     tools:text="7/10글자" />
 
                 <TextView
