[feat] 이용약관 및 개인정보 처리방침 링크 터치 영역 확장

--- a/app/src/main/res/layout/fragment_sign_up_password.xml
+++ b/app/src/main/res/layout/fragment_sign_up_password.xml
@@ -93,7 +93,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/spacingBase"
-            android:layout_marginBottom="@dimen/detailTextSpacing"
+            android:paddingVertical="@dimen/detailTextSpacing"
             android:gravity="center"
             android:text="@string/sign_term"
             android:textAppearance="@style/TextAppearance.Suit.D3"
