--- a/app/src/main/res/layout/item_noti.xml
+++ b/app/src/main/res/layout/item_noti.xml
@@ -50,7 +50,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/spacing14"
-            android:layout_marginTop="2dp"
             android:text="@{String.format(context.getString(R.string.noti_item_type), item.notiType.str)}"
             android:textAppearance="@style/TextAppearance.Suit.B4"
             android:textColor="@color/gray_700"
@@ -73,8 +72,9 @@
             android:id="@+id/item_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing10"
+            android:layout_marginTop="@dimen/spacingSmall"
             android:ellipsize="end"
+            android:lineSpacingExtra="@dimen/lineSpacing"
             android:maxLines="2"
             android:text="@{item.itemName}"
             android:textAppearance="@style/TextAppearance.Suit.D3"
@@ -82,13 +82,12 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/noti_type"
             app:layout_constraintTop_toBottomOf="@id/noti_type"
-            tools:text="아이템명" />
+            tools:text="21SS KEILY JACHKT" />
 
         <TextView
             android:id="@+id/noti_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
             android:textAppearance="@style/TextAppearance.Suit.D3"
             android:textColor="@color/gray_300"
             app:layout_constraintBottom_toBottomOf="parent"
