[mod] 알림 설정 뷰 넘버 피커 서체 변경

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,7 +19,8 @@
     </style>
 
     <style name="AppTheme.NumberPicker">
-        <item name="android:textAppearance">@style/TextAppearance.Suit.D1</item>
+        <item name="android:fontFamily">@font/suit_m</item>
+        <item name="android:textSize">15dp</item>
         <item name="android:textColor">@color/gray_600</item>
         <item name="android:colorControlNormal">@color/transparent</item>
     </style>
