--- a/app/src/main/res/layout/dialog_bottom_noti_setting.xml
+++ b/app/src/main/res/layout/dialog_bottom_noti_setting.xml
@@ -42,7 +42,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <ImageView
+                <View
                     android:layout_width="0dp"
                     android:layout_height="34dp"
                     android:background="@drawable/shape_border_radius_5"
