[mod] 알림 아이템 컴포넌트 서체 및 텍스트 컬러 변경

--- a/app/src/main/res/layout/item_noti.xml
+++ b/app/src/main/res/layout/item_noti.xml
@@ -51,7 +51,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/spacing14"
             android:text="@{String.format(context.getString(R.string.noti_item_type), item.notiType.str)}"
-            android:textAppearance="@style/TextAppearance.Suit.B4"
+            android:textAppearance="@style/TextAppearance.Suit.H5"
             android:textColor="@color/gray_700"
             app:layout_constraintStart_toEndOf="@id/item_image"
             app:layout_constraintTop_toTopOf="@id/item_image"
@@ -72,7 +72,7 @@
             android:id="@+id/item_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacingSmall"
+            android:layout_marginTop="6dp"
             android:ellipsize="end"
             android:lineSpacingExtra="@dimen/lineSpacing"
             android:maxLines="2"
@@ -89,7 +89,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="@style/TextAppearance.Suit.D3"
-            android:textColor="@color/gray_300"
+            android:textColor="@color/gray_200"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@id/noti_type"
             app:timeFormat="@{DateFormatUtilKt.convertStrTimeToDate(item.notiDate)}"
