[fix] lifecycle 버전업에 따른 Livedata > Transformations 호환성 문제 해결

--- a/app/src/main/res/layout/activity_wish_link_sharing.xml
+++ b/app/src/main/res/layout/activity_wish_link_sharing.xml
@@ -75,7 +75,7 @@
                     android:inputType="number"
                     android:onTextChanged="@{viewModel::onItemPriceTextChanged}"
                     android:text="@{viewModel.itemPrice}"
-                    android:selection="@{viewModel.itemPrice.length()}"
+                    android:selection="@{viewModel.itemPrice != null ? viewModel.itemPrice.length() : 0}"
                     android:textAlignment="center"
                     android:textColor="@color/gray_700"
                     android:textColorHint="@color/gray_300"
