--- a/app/src/main/res/layout/snackbar_item.xml
+++ b/app/src/main/res/layout/snackbar_item.xml
@@ -9,8 +9,9 @@
         <TextView
             android:id="@+id/message"
             style="@style/Widget.Snackbar"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:textAppearance="@style/TextAppearance.Suit.D2"
             android:textColor="@color/white"
             tools:text="@string/wish_item_registration_snackbar_text" />
