--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -249,13 +249,13 @@
         <item name="android:backgroundTint">@color/gray_700</item>
         <item name="android:gravity">center</item>
         <item name="android:lineSpacingExtra">@dimen/lineSpacing</item>
-        <item name="android:paddingStart">28dp</item>
-        <item name="android:paddingEnd">28dp</item>
+        <item name="android:paddingStart">32dp</item>
+        <item name="android:paddingEnd">32dp</item>
         <item name="android:paddingTop">@dimen/spacingBase</item>
         <item name="android:paddingBottom">@dimen/spacingBase</item>
         <item name="android:layout_marginStart">@dimen/spacingBase</item>
         <item name="android:layout_marginEnd">@dimen/spacingBase</item>
-        <item name="android:layout_marginBottom">@dimen/spacingBase</item>
+        <item name="android:layout_marginBottom">32dp</item>
     </style>
 
     <style name="My.Menu.Style" parent="">
