--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -59,7 +59,7 @@
             android:id="@+id/item_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/spacingSmall"
+            android:layout_marginHorizontal="@dimen/spacing10"
             android:ellipsize="end"
             android:maxLines="2"
             android:text="@{item.wishItem.name}"
@@ -83,7 +83,7 @@
             android:id="@+id/quantity_control_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="3dp"
+            android:layout_marginStart="5dp"
             android:layout_marginBottom="11dp"
             android:gravity="center_vertical"
             app:layout_constraintBottom_toBottomOf="parent"
