--- a/app/src/main/res/layout/dialog_two_option.xml
+++ b/app/src/main/res/layout/dialog_two_option.xml
@@ -2,7 +2,18 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.hyeeyoung.wishboard.presentation.folder.screens.FolderMoreDialogFragment">
+    tools:context="com.hyeeyoung.wishboard.presentation.folder.screens.TwoOptionDialogFragment">
+
+    <data>
+
+        <variable
+            name="topOption"
+            type="String" />
+
+        <variable
+            name="bottomOption"
+            type="String" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -20,37 +31,39 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <Button
-                android:id="@+id/update"
+                android:id="@+id/btn_top_option"
                 style="@style/Widget.BottomSheetDialog.Option"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/folder_name_edit"
+                android:text="@{topOption}"
                 android:textColor="@color/gray_600"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="@string/folder_name_edit" />
 
             <View
                 android:id="@+id/name_divider"
                 style="@style/Widget.Divider"
                 android:layout_width="match_parent"
-                app:layout_constraintTop_toBottomOf="@id/update" />
+                app:layout_constraintTop_toBottomOf="@id/btn_top_option" />
 
             <Button
-                android:id="@+id/delete"
+                android:id="@+id/btn_bottom_option"
                 style="@style/Widget.BottomSheetDialog.Option"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/folder_delete"
+                android:text="@{bottomOption}"
                 android:textColor="@color/pink"
-                app:layout_constraintTop_toBottomOf="@id/name_divider" />
+                app:layout_constraintTop_toBottomOf="@id/name_divider"
+                tools:text="@string/folder_delete" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/close"
+            android:id="@+id/cancel"
             style="@style/Widget.BottomSheetDialog.Option"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="@string/close"
+            android:text="@string/cancel"
             android:textColor="@color/gray_600"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
